[gd_scene load_steps=6 format=3 uid="uid://te73rn1mvd0u"]

[ext_resource type="StyleBox" uid="uid://dp3qdg5s1mbvm" path="res://scenes/menus/level_designer/property_menu/property_box.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://tg6wa2uikxoh" path="res://scenes/menus/level_designer/ldui/close_button.png" id="2"]
[ext_resource type="Texture2D" uid="uid://3f464248uj0d" path="res://scenes/menus/level_designer/ldui/close_button_pressed.png" id="3"]
[ext_resource type="Script" path="res://scenes/menus/level_designer/property_menu/property_menu.gd" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll2b4"]
bg_color = Color(0.196078, 0.666667, 0.52549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.223529, 0.0941176, 0, 1)
expand_margin_left = 5.0
expand_margin_right = 5.0

[node name="PropertyMenu" type="Panel"]
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("1")
script = ExtResource("4")

[node name="CloseButton" type="TextureButton" parent="."]
clip_contents = true
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")

[node name="PropertyList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 18.0
offset_right = 38.0
offset_bottom = 38.0
theme_override_constants/separation = 8

[node name="Dragger" type="TextureButton" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_right = -16.0
offset_bottom = 8.0
mouse_default_cursor_shape = 6

[node name="ItemName" type="Label" parent="."]
layout_mode = 2
offset_left = 5.0
offset_top = -15.0
offset_right = 17.0
offset_bottom = 2.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ll2b4")
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161

[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="button_down" from="Dragger" to="." method="_on_Dragger_button_down"]
[connection signal="button_up" from="Dragger" to="." method="_on_Dragger_button_up"]
